# harry_potter_llm

./: README.md
backend/: .env_example.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  count_accuracy.py  data_preparation.py  evaluate.py  main.py  pyproject.toml  rag.py
backend/data/: harry_potter_and_the_chamber_of_secrets.txt  harry_potter_and_the_deathly_hallows.txt  harry_potter_and_the_goblet_of_fire.txt  harry_potter_and_the_half_blood_prince.txt  harry_potter_and_the_order_of_the_phoenix.txt  harry_potter_and_the_philosophers_stone.txt  harry_potter_and_the_prisoner_of_azkaban.txt
backend/eda/: EDA_REPORT.md  eda_analysis.ipynb
backend/evaluation/: results.json  valid_questions.json
docs/: ml_system_design_doc.md
front/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
front/src/: App.jsx  index.css
